parody about message

--- a/index.html
+++ b/index.html
@@ -4,5 +4,14 @@
     <title>Wish Upon A Star Charity</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Welcome to the Wish Upon A Star Charity</h1>
+    <h2 class="about" id="about">About Us</h2>
+    <p>
+      We are a non-profit organization that are partnered with hospitals aroud
+      the world to help people whose illnesses are deemed terminal to get their
+      final wish. We are not a rip-off of any other charity, we promise. Don't
+      look it up.
+    </p>
+  </body>
 </html>
