add a couple of kids from the make a wish site

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Wish Upon A Star Charity</title>
+    <title>Wish Upon A Star</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -13,5 +13,32 @@
       final wish. We are not a rip-off of any other charity, we promise. Don't
       look it up.
     </p>
+    <h2 class="helped" id="who-we-helped">Who We Helped</h2>
+    <p>
+      These are a few pepole who've been ticked things off their bucket list
+      thanks to a group who was definitely us. We did this and no one else. The
+      only ones who helped were those who donated to us and our cause. Really.
+    </p>
+    <br />
+    <div class="kid-with-puppy">
+      <p>
+        This is Nyla. They have leukemia. They're 7 years old and their wish was
+        to have a puppy.
+      </p>
+      <img
+        src="images/kid-with-puppy.png"
+        alt="A picture of Nyla holding their new puppy"
+      />
+    </div>
+    <div class="imaginary-friends">
+      <p>
+        This is Joanna, Age 4. They have a respiratory disorder and they wanted
+        to go to new york and meet their imaginary friends.
+      </p>
+      <img
+        src="images/imaginary-friends.png"
+        alt="Joanna and their imaginary friends sitting on a park bench in New York"
+      />
+    </div>
   </body>
 </html>
