--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav id="top-nav-bar">
+      <a class="help-link" href="#who-we-helped">Who We Helped</a>
+      <a class="about-link" href="#about">About</a>
+      <a class="why-link" href="#why">Why Do We Do This?</a>
+      <a class="donate" href="#footer">Donate</a>
+    </nav>
     <h1>Welcome to the Wish Upon A Star Charity</h1>
-    <h2 class="about" id="about">About Us</h2>
-    <p>
-      We are a non-profit organization that are partnered with hospitals aroud
-      the world to help people whose illnesses are deemed terminal to get their
-      final wish. We are not a rip-off of any other charity, we promise. Don't
-      look it up.
-    </p>
     <h2 class="helped" id="who-we-helped">Who We Helped</h2>
     <p>
       These are a few pepole who've been ticked things off their bucket list
@@ -40,5 +39,33 @@
         alt="Joanna and their imaginary friends sitting on a park bench in New York"
       />
     </div>
+    <h2 class="about" id="about">About Us</h2>
+    <p>
+      We are a non-profit organization that are partnered with hospitals aroud
+      the world to help people whose illnesses are deemed terminal to get their
+      final wish. We are not a rip-off of any other charity, we promise. Don't
+      look it up.
+    </p>
+    <h2 class="why" id="why">Why Do We Do This?</h2>
+    <p>
+      We feel bad for those of us who don't get to pick off things from their
+      bucket list because the money they would use to do that is going towards
+      medical expenses. We want to make sure that people who do get their life
+      taken from them preemptively due to terminal illness at least get to leave
+      with no regrets. Thats our mission statement. No one elses. Why do you
+      doubt us?
+    </p>
+    <footer id="footer">
+      <p>
+        The kids on this page were actually helped by
+        <a href="https://wish.org" target="_blank">Make a Wish Foundation</a>.
+        This is a parody site for a school project. Consider
+        <a
+          href="https://secure2.wish.org/site/SPageServer?pagename=donate_today&chid=100-000"
+          target="_blank"
+          >donating to them</a
+        >.
+      </p>
+    </footer>
   </body>
 </html>
