styling and typo fixes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav id="top-nav-bar">
+    <nav class="navbar" id="top-nav-bar">
       <a class="help-link" href="#who-we-helped">Who We Helped</a>
       <a class="about-link" href="#about">About</a>
       <a class="why-link" href="#why">Why Do We Do This?</a>
@@ -24,11 +24,12 @@
     <h1>Welcome to the Wish Upon A Star Charity</h1>
     <h2 class="helped" id="who-we-helped">Who We Helped</h2>
     <p>
-      These are a few pepole who've been ticked things off their bucket list
-      thanks to a group who was definitely us. We did this and no one else. The
-      only ones who helped were those who donated to us and our cause. Really.
+      These are a few people who've been able to tick things off their bucket
+      list thanks to a group who was definitely us. We did this and no one else.
+      The only ones who helped were those who donated to us and our cause.
+      Really.
     </p>
-    <br />
+    <hr />
     <div class="kid-with-puppy">
       <p>
         This is Nyla. They have leukemia. They're 7 years old and their wish was
@@ -38,6 +39,7 @@
         src="images/kid-with-puppy.png"
         alt="A picture of Nyla holding their new puppy"
       />
+      <hr />
     </div>
     <div class="imaginary-friends">
       <p>
@@ -49,6 +51,7 @@
         alt="Joanna and their imaginary friends sitting on a park bench in New York"
       />
     </div>
+    <hr />
     <h2 class="about" id="about">About Us</h2>
     <p>
       We are a non-profit organization that are partnered with hospitals aroud
@@ -56,6 +59,7 @@
       final wish. We are not a rip-off of any other charity, we promise. Don't
       look it up.
     </p>
+    <hr />
     <h2 class="why" id="why">Why Do We Do This?</h2>
     <p>
       We feel bad for those of us who don't get to pick off things from their
@@ -66,6 +70,7 @@
       doubt us?
     </p>
     <footer id="footer">
+      <hr />
       <p>
         The kids on this page were <em>actually</em> helped by
         <a href="https://wish.org" target="_blank">Make a Wish Foundation</a>.
