tweaks for length & looks

--- a/index.html
+++ b/index.html
@@ -24,55 +24,77 @@
     <h1>Welcome to the Wish Upon A Star Charity</h1>
     <h2 class="helped" id="who-we-helped">Who We Helped</h2>
     <p>
-      These are a few people who've been able to tick things off their bucket
-      list thanks to a group who was definitely us. We did this and no one else.
-      The only ones who helped were those who donated to us and our cause.
-      Really.
+      Wish Upon a Star, the whimsical charity for dreamers of all kinds, has
+      made some truly "magical" wishes come true! From granting an eccentric
+      billionaire his desire for a gold-plated yacht shaped like a unicorn, to
+      helping a spoiled teenager fulfill their dream of owning an entire theme
+      park for a day, this organization takes wish fulfillment to new and absurd
+      heights. Forget about helping the needy—Wish Upon a Star specializes in
+      the lavish, the unnecessary, and the downright ridiculous, making the
+      impossible possible, as long as it's excessively extravagant!
     </p>
     <hr />
-    <div class="kid-with-puppy">
-      <p>
-        This is Nyla. They have leukemia. They're 7 years old and their wish was
-        to have a puppy.
-      </p>
-      <img
-        src="images/kid-with-puppy.png"
-        alt="A picture of Nyla holding their new puppy"
-      />
-      <hr />
-    </div>
-    <div class="imaginary-friends">
-      <p>
-        This is Joanna, Age 4. They have a respiratory disorder and they wanted
-        to go to new york and meet their imaginary friends.
-      </p>
-      <img
-        src="images/imaginary-friends.png"
-        alt="Joanna and their imaginary friends sitting on a park bench in New York"
-      />
-    </div>
+    <table>
+      <tr>
+        <td>
+          <div class="kid-with-puppy">
+            <img
+              src="images/kid-with-puppy.png"
+              alt="A picture of Nyla holding their new puppy"
+            />
+            <p>
+              Wish Upon a Star recently made six-year-old Nyla’s dream come true
+              by turning her into the star of her own Broadway-style musical.
+              With a glittering tutu, a famous cast, and an over-the-top
+              performance, Nyla dazzled the audience, living out her fantasy of
+              being a star for a day. This is Nyla with her little dog actor who
+              was also in the musical.
+            </p>
+          </div>
+        </td>
+        <td>
+          <div class="imaginary-friends">
+            <img
+              src="images/imaginary-friends.png"
+              alt="Joanna and their imaginary friends sitting on a park bench in New York"
+            />
+            <p>
+              Wish Upon a Star made Joanna’s wish come true by bringing her
+              imaginary friends to life—as plushies! Now, Joanna’s make-believe
+              pals are cuddly companions she can carry everywhere, turning her
+              imaginary world into a soft and snuggly reality
+            </p>
+          </div>
+        </td>
+      </tr>
+    </table>
     <hr />
     <h2 class="about" id="about">About Us</h2>
     <p>
-      We are a non-profit organization that are partnered with hospitals aroud
-      the world to help people whose illnesses are deemed terminal to get their
-      final wish. We are not a rip-off of any other charity, we promise. Don't
-      look it up.
+      At Wish Upon a Star, we specialize in making the most outlandish,
+      over-the-top dreams a reality. Whether it’s creating a life-sized stuffed
+      animal kingdom or building a unicorn-shaped yacht, no wish is too
+      extravagant—or too unnecessary—for us to fulfill. We’re dedicated to
+      turning wild fantasies into tangible experiences, prioritizing the whims
+      of the wildly imaginative over mundane needs. With us, wish fulfillment
+      isn’t just about making dreams come true—it’s about doing it in the most
+      absurdly luxurious way possible!
     </p>
     <hr />
     <h2 class="why" id="why">Why Do We Do This?</h2>
     <p>
-      We feel bad for those of us who don't get to pick off things from their
-      bucket list because the money they would use to do that is going towards
-      medical expenses. We want to make sure that people who do get their life
-      taken from them preemptively due to terminal illness at least get to leave
-      with no regrets. Thats our mission statement. No one elses. Why do you
-      doubt us?
+      Wish Upon a Star exists because we believe life is too short for ordinary
+      dreams. While other charities focus on practical needs, we saw a gap in
+      the market for the whimsical, the lavish, and the downright ridiculous.
+      We’re here to ensure that no eccentric desire goes unfulfilled, turning
+      the wildest imaginations into reality. Whether it’s for the fun of it or
+      just because it’s possible, we exist to prove that sometimes, the most
+      outlandish wishes deserve to come true, simply because they can.
     </p>
     <footer id="footer">
       <hr />
       <p>
-        The kids on this page were <em>actually</em> helped by
+        The kids in the pictures on this page were <em>actually</em> helped by
         <a href="https://wish.org" target="_blank">Make a Wish Foundation</a>.
         This is a parody site for a school project. Consider
         <a
@@ -80,6 +102,12 @@
           target="_blank"
           >donating to them</a
         >.
+      </p>
+      <p>
+        Also, thanks to
+        <a href="https://chatgpt.com" target="_blank">ChatGPT</a> for generating
+        the paragraphs on this page. I hope it was obvious that these were
+        parody.
       </p>
     </footer>
   </body>
