--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <td>
           <div class="kid-with-puppy">
             <img
-              src="images/kid-with-puppy.png"
+              src="images/kid-with-puppy-new.png"
               alt="A picture of Nyla holding their new puppy"
             />
             <p>
