Several small tweaks because we aren't allowed to target tags (?!?)

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
   <head>
     <title>Wish Upon A Star</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" hr class="hr" ef="style.css" />
   </head>
-  <body>
+  <body class="body">
     <nav class="navbar" id="top-nav-bar">
-      <a class="help-link" href="#who-we-helped">Who We Helped</a>
-      <a class="about-link" href="#about">About</a>
-      <a class="why-link" href="#why">Why Do We Do This?</a>
-      <a class="donate" onclick="alertAndLeave()">Donate</a>
+      <a class="a" class="help-link" hr class="hr" ef="#who-we-helped"
+        >Who We Helped</a
+      >
+      <a class="a" class="about-link" hr class="hr" ef="#about">About</a>
+      <a class="a" class="why-link" hr class="hr" ef="#why"
+        >Why Do We Do This?</a
+      >
+      <a class="a" class="donate" onclick="alertAndLeave()">Donate</a>
     </nav>
     <script>
       function alertAndLeave() {
@@ -21,9 +25,9 @@
         win.focus();
       }
     </script>
-    <h1>Welcome to the Wish Upon A Star Charity</h1>
-    <h2 class="helped" id="who-we-helped">Who We Helped</h2>
-    <p>
+    <h1 class="h1">Welcome to the Wish Upon A Star Charity</h1>
+    <h2 class="h2 helped" id="who-we-helped">Who We Helped</h2>
+    <p class="para">
       Wish Upon a Star, the whimsical charity for dreamers of all kinds, has
       made some truly "magical" wishes come true! From granting an eccentric
       billionaire his desire for a gold-plated yacht shaped like a unicorn, to
@@ -33,16 +37,17 @@
       the lavish, the unnecessary, and the downright ridiculous, making the
       impossible possible, as long as it's excessively extravagant!
     </p>
-    <hr />
+    <hr class="hr" />
     <table>
       <tr>
         <td>
-          <div class="kid-with-puppy">
+          <div class="div kid-with-puppy">
             <img
+              class="img"
               src="images/kid-with-puppy-new.png"
               alt="A picture of Nyla holding their new puppy"
             />
-            <p>
+            <p class="para">
               Wish Upon a Star recently made six-year-old Nyla’s dream come true
               by turning her into the star of her own Broadway-style musical.
               With a glittering tutu, a famous cast, and an over-the-top
@@ -53,12 +58,13 @@
           </div>
         </td>
         <td>
-          <div class="imaginary-friends">
+          <div class="div imaginary-friends">
             <img
+              class="img"
               src="images/imaginary-friends.png"
               alt="Joanna and their imaginary friends sitting on a park bench in New York"
             />
-            <p>
+            <p class="para">
               Wish Upon a Star made Joanna’s wish come true by bringing her
               imaginary friends to life—as plushies! Now, Joanna’s make-believe
               pals are cuddly companions she can carry everywhere, turning her
@@ -68,9 +74,9 @@
         </td>
       </tr>
     </table>
-    <hr />
-    <h2 class="about" id="about">About Us</h2>
-    <p>
+    <hr class="hr" />
+    <h2 class="h2 about" id="about">About Us</h2>
+    <p class="para">
       At Wish Upon a Star, we specialize in making the most outlandish,
       over-the-top dreams a reality. Whether it’s creating a life-sized stuffed
       animal kingdom or building a unicorn-shaped yacht, no wish is too
@@ -80,9 +86,9 @@
       isn’t just about making dreams come true—it’s about doing it in the most
       absurdly luxurious way possible!
     </p>
-    <hr />
-    <h2 class="why" id="why">Why Do We Do This?</h2>
-    <p>
+    <hr class="hr" />
+    <h2 class="h2 why" id="why">Why Do We Do This?</h2>
+    <p class="para">
       Wish Upon a Star exists because we believe life is too short for ordinary
       dreams. While other charities focus on practical needs, we saw a gap in
       the market for the whimsical, the lavish, and the downright ridiculous.
@@ -91,23 +97,25 @@
       just because it’s possible, we exist to prove that sometimes, the most
       outlandish wishes deserve to come true, simply because they can.
     </p>
-    <footer id="footer">
-      <hr />
-      <p>
+    <footer class="footer" id="footer">
+      <hr class="hr" />
+      <p class="para">
         The kids in the pictures on this page were <em>actually</em> helped by
-        <a href="https://wish.org" target="_blank">Make a Wish Foundation</a>.
-        This is a parody site for a school project. Consider
+        <a class="a" href="https://wish.org" target="_blank"
+          >Make a Wish Foundation</a
+        >. This is a parody site for a school project. Consider
         <a
+          class="a"
           href="https://secure2.wish.org/site/SPageServer?pagename=donate_today&chid=100-000"
           target="_blank"
           >donating to them</a
         >.
       </p>
-      <p>
+      <p class="para">
         Also, thanks to
-        <a href="https://chatgpt.com" target="_blank">ChatGPT</a> for generating
-        the paragraphs on this page. I hope it was obvious that these were
-        parody.
+        <a class="a" href="https://chatgpt.com" target="_blank">ChatGPT</a> for
+        generating the paragraphs on this page. I hope it was obvious that these
+        were parody.
       </p>
     </footer>
   </body>
