fix more things for Rjay

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </p>
     <hr class="hr" />
     <table>
-      <tr>
+      <tr class="tr">
         <td>
           <div class="div kid-with-puppy">
             <img
